@@ -1,4 +1,4 @@
-$Id: History,v 1.29 2000-11-20 19:07:52 gcosmo Exp $
+$Id: History,v 1.30 2001-02-15 14:34:05 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,13 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+February 15th. 2001  G. Cosmo - geomvol-V03-00-00
+
+- Fix in G4ReplicaNavigation::ComputeTransformation(...) for kPhi case.
+  Removed shift of 0.5 to center of replica volume to conform with original
+  specifications for replica transformations in Phi.
+- Cosmetics in G4ReplicaNavigation.cc.
 
 November 20th, 2000  G. Cosmo - geomvol-V02-00-01
 
